plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.teckit.festival'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// ✅ AWS SDK v2 (Presigned URL 발급용)
	//
	// implementation platform("software.amazon.awssdk:bom:2.25.60")
	// implementation "software.amazon.awssdk:s3"

	// ✅ AWS SDK v1 (서버 직접 업로드용 - FileUploadUtil)
	//implementation 'com.amazonaws:aws-java-sdk-s3:1.12.788'
	//implementation 'com.amazonaws:aws-java-sdk-sts:1.12.788'

	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// XML/JSON processing for old AWS SDK
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.2'

	// Lombok and Mapstruct
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// Database driver
	implementation 'org.mariadb.jdbc:mariadb-java-client'

	// OpenAPI/Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// .env file loader
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// Other libraries
	implementation 'com.google.firebase:firebase-admin:9.3.0'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'

	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
